Tweak title element of html

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Konami touch</title>
+	<title>k-touch demo</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="css/k-touch.css">
 </head>
