--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="k-touch : Providing the Konami code on touch devices." />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>k-touch by davidcmoulton</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>k-touch</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/davidcmoulton/k-touch">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/davidcmoulton/k-touch/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/davidcmoulton/k-touch/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/davidcmoulton/k-touch">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">k-touch</h1>
-          <h2 id="project_tagline">Providing the Konami code on touch devices.</h2>
+      <section>
+        <div id="title">
+          <h1>k-touch</h1>
+          <p>Providing the Konami code on touch devices.</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/davidcmoulton">davidcmoulton</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/davidcmoulton/k-touch/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/davidcmoulton/k-touch/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h1>
 <a name="k-touch" class="anchor" href="#k-touch"><span class="octicon octicon-link"></span></a>k-touch</h1>
 
@@ -45,7 +52,7 @@
 
 <p>konami-touch provides touch-screen-actuated Konami code driven functionality, <strong><em>and</em></strong> additionally throws in the traditional keyboard-entered Konami code mechanism for extra fun.</p>
 
-<p>This implementation plays audio using html5 audio.</p>
+<p>This implentation plays audio using html5 audio.</p>
 
 <p>If you're using it on a touch device, it also uses canvas.</p>
 
@@ -92,18 +99,15 @@
 <p>It also uses <code>div#msg</code> to indicate if touch support has been detected.</p>
 
 <p>This could be improved by using some kind of formal logger, but that's not a priority. That said, if you want it to see it in, send me a pull request :-)</p>
+
+<h2>
+<a name="licence" class="anchor" href="#licence"><span class="octicon octicon-link"></span></a>Licence</h2>
+
+<p>This work is available under the MIT licence: <a href="http://davidcmoulton.mit-license.org">http://davidcmoulton.mit-license.org</a></p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">k-touch maintained by <a href="https://github.com/davidcmoulton">davidcmoulton</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
