Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 
 <p>b. load your page on a touch-enabled device, and begin to swipe the Konami code. You should be given the facility to enter B and A at the right moment, assuming you've got it right up to that point.</p>
 </li>
-</ol><h2>
+</ol><p>See <a href="this%20example">demo.html</a>.</p>
+
+<h2>
 <a name="where-does-it-work" class="anchor" href="#where-does-it-work"><span class="octicon octicon-link"></span></a>Where does it work?</h2>
 
 <p>This should work on all desktop browsers that support html5 audio.</p>
