Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="k-touch : Providing the Konami code on touch devices." />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>k-touch by davidcmoulton</title>
+    <title>k-touch</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>k-touch</h1>
-        <h2>Providing the Konami code on touch devices.</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/davidcmoulton/k-touch">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/davidcmoulton/k-touch/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/davidcmoulton/k-touch/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/davidcmoulton/k-touch" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">k-touch</h1>
+          <h2 id="project_tagline">Providing the Konami code on touch devices.</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/davidcmoulton/k-touch/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/davidcmoulton/k-touch/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="k-touch" class="anchor" href="#k-touch"><span class="octicon octicon-link"></span></a>k-touch</h1>
 
@@ -101,6 +104,15 @@
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">k-touch maintained by <a href="https://github.com/davidcmoulton">davidcmoulton</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
