Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <p>This hasn't been tested on devices that support both touch and have a keyboard, so I'll be interested to see how it works on, say, a Chromebook Pixel.</p>
 
-<p>This could be improved by using some kind of formal logger, but that's not a priority. Actually, this could be improved in many ways, but it was built for fun :-) That said, if there's something specific you'd like to see in, fork it and send me a pull request :-)</p>
+<p>This could be improved by using some kind of formal logger, but that's not a priority. Actually, this could be improved in many ways, but it was built as a bit of fun. That said, if there's something specific you'd like to see in, fork it and send me a pull request :-)</p>
 
 <h2>
 <a name="licence" class="anchor" href="#licence"><span class="octicon octicon-link"></span></a>Licence</h2>
