Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>
 <a name="what-it-does" class="anchor" href="#what-it-does"><span class="octicon octicon-link"></span></a>What it does</h2>
 
-<p>k-touch provides touch-screen-actuated Konami code driven functionality, <strong><em>and</em></strong> additionally throws in the traditional keyboard-entered Konami code mechanism for extra fun.</p>
+<p>k-touch provides touch-screen-actuated Konami-code-driven functionality, <strong><em>and</em></strong> throws in the traditional keyboard-entered Konami code mechanism for extra fun.</p>
 
 <p>This implentation plays audio using html5 audio.</p>
 
@@ -77,7 +77,6 @@
 <li><p>Built in browser on Android ICS</p></li>
 <li><p>Dolphin browser on Android ICS &amp; Jellybean</p></li>
 <li><p>Safari on iPad iOS 6</p></li>
-<li><p>Dolphin Mini</p></li>
 </ul><h2>
 <a name="where-doesnt-it-work" class="anchor" href="#where-doesnt-it-work"><span class="octicon octicon-link"></span></a>Where doesn't it work?</h2>
 
@@ -85,7 +84,7 @@
 
 <p>This also doesn't currently work on Chrome on Android. The swipe gestures are received, but the touch event on the canvas B and A buttons isn't detected for reasons I haven't got to the bottom of yet.</p>
 
-<p>It doesn't work on the proxy browser Opera Mini.</p>
+<p>It won't work on proxy browsers, like Opera Mini and Dolphin Mini.</p>
 
 <h2>
 <a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes</h2>
@@ -96,7 +95,7 @@
 
 <p>This hasn't been tested on devices that support both touch and have a keyboard, so I'll be interested to see how it works on, say, a Chromebook Pixel.</p>
 
-<p>This could be improved by using some kind of formal logger, but that's not a priority. Actually, this could be improved in many ways, but it was built as a bit of fun. That said, if there's something specific you'd like to see in, fork it and send me a pull request :-)</p>
+<p>This could be improved by using some kind of formal logger, but that's not a priority. Actually, this could be improved in many ways, but it was built for fun :-) That said, if there's something specific you'd like to see in, fork it and send me a pull request :-)</p>
 
 <h2>
 <a name="licence" class="anchor" href="#licence"><span class="octicon octicon-link"></span></a>Licence</h2>
