Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 <li><p>Opera mobile (webkit version) on Android ICS &amp; Jellybean</p></li>
 <li><p>Built in browser on Android ICS</p></li>
 <li><p>Dolphin browser on Android ICS &amp; Jellybean</p></li>
-<li><p>Safari on iPad iOS 6</p></li>
+<li><p>Dolphin Mini on Android Gingerbread, ICS and Jellybean</p></li>
+<li><p>Safari on iPad iOS 6  </p></li>
 </ul><h2>
 <a name="where-doesnt-it-work" class="anchor" href="#where-doesnt-it-work"><span class="octicon octicon-link"></span></a>Where doesn't it work?</h2>
 
@@ -84,7 +85,7 @@
 
 <p>This also doesn't currently work on Chrome on Android. The swipe gestures are received, but the touch event on the canvas B and A buttons isn't detected for reasons I haven't got to the bottom of yet.</p>
 
-<p>It won't work on proxy browsers, like Opera Mini and Dolphin Mini.</p>
+<p>It doesn't work on Opera Mini (buth then you wouldn't really expect it to).</p>
 
 <h2>
 <a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes</h2>
